# ferrum

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  models.rs
src/api/: auth.rs  health.rs  mod.rs  music.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  user_repository.rs
