[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

lofty = { version = "0.22" }

# Optional for logging (recommended)
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional: dotenv support for local dev
dotenvy = "0.15"