[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"
description = "A lightweight, self-hosted music streaming server"
license = "MIT"
repository = "https://github.com/yourusername/ferrum"
keywords = ["music", "streaming", "audio", "server", "api"]
categories = ["multimedia::audio", "web-programming::http-server"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio metadata
lofty = "0.22"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Configuration
dotenvy = "0.15"

# Authentication
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
parking_lot = "0.12"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
actix-rt = "2.9"
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true